deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: node-app-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: node-app

  template:
    metadata:
      labels:
        app: node-app

    spec:
      containers:
      - name: node-app
        image: devops-node-app
        imagePullPolicy: Never

        ports:
        - containerPort: 3000
