ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: node-app-ingress

spec:
  rules:
  - host: 

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: node-app-service
            port:
              number: 3000
